CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_pmt_detail_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_pmt_detail_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_pmt_detail_hist</externalName>
    <fields>
        <fullName>amt_pmt_detail_adjmt__c</fullName>
        <description>amt_pmt_detail_adjmt</description>
        <externalDeveloperName>amt_pmt_detail_adjmt</externalDeveloperName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_status_detail_pmt_adjmt__c</fullName>
        <description>cde_status_detail_pmt_adjmt</description>
        <externalDeveloperName>cde_status_detail_pmt_adjmt</externalDeveloperName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>Adjustment ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_detail_adjmt__c</fullName>
        <description>idn_detail_adjmt</description>
        <externalDeveloperName>idn_detail_adjmt</externalDeveloperName>
        <label>Adjustment Detail ID</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT_PMT_DETAIL__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT_PMT_DETAIL__c</referenceTo>
        <relationshipLabel>Adjustment Payment Detail Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_pmt_detail_hist1</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_detail_adjmt_non__c</fullName>
        <description>idn_detail_adjmt_non</description>
        <externalDeveloperName>idn_detail_adjmt_non</externalDeveloperName>
        <label>Non Adjustment Detail ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_detail_pmt_adjmt__c</fullName>
        <description>idn_detail_pmt_adjmt</description>
        <externalDeveloperName>idn_detail_pmt_adjmt</externalDeveloperName>
        <label>Adjust Detail payment ID</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT_PMT_DETAIL__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT_PMT_DETAIL__c</referenceTo>
        <relationshipLabel>Adjustment Payment Detail Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_pmt_detail_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_detail_pmt_adjmt_hist__c</fullName>
        <description>idn_detail_pmt_adjmt_hist</description>
        <externalDeveloperName>idn_detail_pmt_adjmt_hist</externalDeveloperName>
        <label>Adjust Detail payment History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_pmt_adjmt__c</fullName>
        <description>idn_pmt_adjmt</description>
        <externalDeveloperName>idn_pmt_adjmt</externalDeveloperName>
        <label>Adjustment payment</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_pmt_detail_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adjustment Payment Detail History</label>
    <pluralLabel>Adjustment Payment Detail History</pluralLabel>
</CustomObject>